<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/txtTituloTarefa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo_tarefa"
        android:textAlignment="center"
        android:textColor="@color/teal_500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/itemViewAgendadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:elevation="4dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloTarefa"
        app:layout_constraintVertical_bias="0.086">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/linearTarefa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtLabelTitulo"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/txt_label_titulo"
                    android:textColor="@color/teal_500"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtViewTitulo"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearDescricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearTarefa">

                <TextView
                    android:id="@+id/txtLabelDescricao"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/txt_label_descriao"
                    android:textColor="@color/teal_500"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtViewDescricao"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearData"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtLabelData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/teal_500"
                    android:text="@string/txt_label_data_da_tarefa"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtViewData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearCheckbox"
                android:layout_width="100dp"
                android:layout_height="24dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearData">

                <CheckBox
                    android:id="@+id/checkboxConcluirTarefa"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:buttonTint="@color/teal_500"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtLabelCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/txt_label_checkbox_concluir"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearBtnEditarExcluir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemViewAgendadas">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="50dp">

            <ImageButton
                android:id="@+id/btnEditar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:accessibilityPaneTitle="@string/btn_editar"
                android:background="@color/teal_500"
                android:tint="@color/white"
                android:src="@drawable/ic_baseline_edit_24" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:elevation="5dp"
            app:cardCornerRadius="50dp">
        <ImageButton
            android:id="@+id/btnExcluir"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:accessibilityPaneTitle="@string/btn_editar"
            android:background="@color/teal_500"
            android:tint="@color/white"
            android:src="@drawable/ic_baseline_delete_forever_24"
            />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearFormEditarTarefa"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearBtnEditarExcluir">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutEditarTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="443dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditarTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_titulo" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayouEditarDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="443dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditarDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_descricao" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutEditarData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="443dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditarData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:drawableLeft="@drawable/ic_calendar"
                android:focusable="false"
                android:hint="@string/input_data_da_tarefa"
                android:inputType="date"
                android:paddingTop="17dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSalvarTarefaEditada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_500"
            android:text="@string/btn_salvar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>