<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemViewConcluidas"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:context=".ui.tarefaconcluida.TarefasConcluidasFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewConcluida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/linearTarefaConcluida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtLabelTituloConcluido"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/txt_label_titulo"
                    android:textColor="@color/teal_500"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtViewTituloConcluido"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearDescricaoConcluida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearTarefaConcluida">

                <TextView
                    android:id="@+id/txtLabelDescricaoConcluida"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/txt_label_descriao"
                    android:textColor="@color/teal_500"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtViewDescricaoConcluida"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btnClose"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:backgroundTint="@color/transparente"
                android:src="@drawable/ic_baseline_close_24"
                android:tint="@color/teal_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearDataConcluido"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnClose">

                <TextView
                    android:id="@+id/txtLabelDataConcluido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:gravity="center_vertical"
                    android:text="@string/txt_label_data_da_tarefa"
                    android:textColor="@color/teal_500"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtViewDataConcluido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearCheckboxConcluido"
                android:layout_width="120dp"
                android:layout_height="24dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearDataConcluido">

                <CheckBox
                    android:id="@+id/checkboxTarefaConcluida"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:buttonTint="@color/teal_500" />

                <TextView
                    android:id="@+id/txtLabelCheckboxConcluido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/txt_label_checkbox_concluida"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>